--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "lib/ds-test"]
 	path = lib/ds-test
 	url = https://github.com/dapphub/ds-test
+[submodule "lib/geb-proxy-actions"]
+	path = lib/geb-proxy-actions
+	url = https://github.com/reflexer-labs/geb-proxy-actions.git
